[gd_scene load_steps=4 format=3 uid="uid://c11p23vtdxl1o"]

[ext_resource type="Script" path="res://jokes/base_joke.gd" id="1_vdftl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4jmdl"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sjxo8"]
radius = 61.131

[node name="Banana" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_vdftl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true

[node name="EffectCollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
shape = SubResource("CircleShape2D_4jmdl")

[node name="LaughArea" type="Area2D" parent="."]

[node name="LaughCollisionShape2D" type="CollisionShape2D" parent="LaughArea"]
shape = SubResource("CircleShape2D_sjxo8")
debug_color = Color(0.682353, 0.701961, 0, 0.419608)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="LaughArea" to="." method="_on_laugh_area_body_entered"]
[connection signal="body_exited" from="LaughArea" to="." method="_on_laugh_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
